<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QantasActivity">


    <ImageView
        android:id="@+id/qantas"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/qantas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/qantastitle"
        style="@style/templatejudulmaskapai"
        android:text="@string/qantastitle"
        app:layout_constraintTop_toBottomOf="@id/qantas"
        />

    <TextView
        android:id="@+id/qantasnegara"
        style="@style/templatenegara"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/qantastitle"/>


    <TextView
        style="@style/templatenegara"
        android:text="@string/qantasnegara"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/qantasnegara"
        app:layout_constraintTop_toBottomOf="@id/qantastitle"
        />

    <TextView
        android:id="@+id/qantashub"
        style="@style/templatehub"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/qantasnegara"/>

    <TextView
        android:id="@+id/listhub"
        style="@style/templatehub"
        app:layout_constraintTop_toBottomOf="@id/qantashub"
        android:textColor="#FFFF6600"
        android:text="@string/qantashub"/>

    <TextView
        android:id="@+id/qantasaliansi"
        style="@style/templatealiansi"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/listhub"/>

    <TextView
        android:id="@+id/aliansi"
        style="@style/templatealiansi"
        android:text="@string/qantasaliansi"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/qantasaliansi"
        app:layout_constraintTop_toBottomOf="@id/listhub"
        />

    <TextView
        android:id="@+id/qantasarmada"
        style="@style/templatearmada"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/qantasaliansi"/>

    <TextView
        android:id="@+id/armada"
        style="@style/templatearmada"
        android:text="@string/qantasarmada"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/qantasarmada"
        app:layout_constraintTop_toBottomOf="@id/qantasaliansi"
        />

    <TextView
        android:id="@+id/qantastujuan"
        style="@style/templatetujuan"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/qantasarmada"/>

    <TextView
        style="@style/templatetujuan"
        android:text="@string/qantastujuan"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/qantastujuan"
        app:layout_constraintTop_toBottomOf="@id/qantasarmada"
        />

</androidx.constraintlayout.widget.ConstraintLayout>