<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CathayPacificActivity">


    <ImageView
        android:id="@+id/cathaypacific"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/cathay_pacific"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/cathaytitle"
        style="@style/templatejudulmaskapai"
        android:text="@string/cathaytitle"
        app:layout_constraintTop_toBottomOf="@id/cathaypacific"
        />

    <TextView
        android:id="@+id/cathaynegara"
        style="@style/templatenegara"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/cathaytitle"/>


    <TextView
        style="@style/templatenegara"
        android:text="@string/cathaynegara"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/cathaynegara"
        app:layout_constraintTop_toBottomOf="@id/cathaytitle"
        />

    <TextView
        android:id="@+id/cathayhub"
        style="@style/templatehub"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/cathaynegara"/>

    <TextView
        android:id="@+id/listhub"
        style="@style/templatehub"
        app:layout_constraintTop_toBottomOf="@id/cathayhub"
        android:textColor="#FFFF6600"
        android:text="@string/cathayhub"/>

    <TextView
        android:id="@+id/cathayaliansi"
        style="@style/templatealiansi"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/listhub"/>

    <TextView
        android:id="@+id/aliansi"
        style="@style/templatealiansi"
        android:text="@string/cathayaliansi"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/cathayaliansi"
        app:layout_constraintTop_toBottomOf="@id/listhub"
        />

    <TextView
        android:id="@+id/cathayarmada"
        style="@style/templatearmada"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/cathayaliansi"/>

    <TextView
        android:id="@+id/armada"
        style="@style/templatearmada"
        android:text="@string/cathayarmada"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/cathayarmada"
        app:layout_constraintTop_toBottomOf="@id/cathayaliansi"
        />

    <TextView
        android:id="@+id/cathaytujuan"
        style="@style/templatetujuan"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/cathayarmada"/>

    <TextView
        style="@style/templatetujuan"
        android:text="@string/cathaytujuan"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/cathaytujuan"
        app:layout_constraintTop_toBottomOf="@id/cathayarmada"
        />

</androidx.constraintlayout.widget.ConstraintLayout>