<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmericanAirlinesActivity">


    <ImageView
        android:id="@+id/american"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/american_airlines"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/americantitle"
        style="@style/templatejudulmaskapai"
        android:text="@string/britishtitle"
        app:layout_constraintTop_toBottomOf="@id/american"
        />

    <TextView
        android:id="@+id/americannegara"
        style="@style/templatenegara"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/americantitle"/>


    <TextView
        style="@style/templatenegara"
        android:text="@string/americannegara"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/americannegara"
        app:layout_constraintTop_toBottomOf="@id/americantitle"
        />

    <TextView
        android:id="@+id/americanhub"
        style="@style/templatehub"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/americannegara"/>

    <TextView
        android:id="@+id/listhub"
        style="@style/templatehub"
        app:layout_constraintTop_toBottomOf="@id/americanhub"
        android:textColor="#FFFF6600"
        android:text="@string/americanhub"/>

    <TextView
        android:id="@+id/americanaliansi"
        style="@style/templatealiansi"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/listhub"/>

    <TextView
        android:id="@+id/aliansi"
        style="@style/templatealiansi"
        android:text="@string/americanaliansi"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/americanaliansi"
        app:layout_constraintTop_toBottomOf="@id/listhub"
        />

    <TextView
        android:id="@+id/americanarmada"
        style="@style/templatearmada"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/americanaliansi"/>

    <TextView
        android:id="@+id/armada"
        style="@style/templatearmada"
        android:text="@string/americanarmada"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/americanarmada"
        app:layout_constraintTop_toBottomOf="@id/americanaliansi"
        />

    <TextView
        android:id="@+id/americantujuan"
        style="@style/templatetujuan"
        android:textColor="#FF000000"
        app:layout_constraintTop_toBottomOf="@+id/americanarmada"/>

    <TextView
        style="@style/templatetujuan"
        android:text="@string/americantujuan"
        android:textColor="#FFFF6600"
        app:layout_constraintLeft_toRightOf="@id/americantujuan"
        app:layout_constraintTop_toBottomOf="@id/americanarmada"
        />

</androidx.constraintlayout.widget.ConstraintLayout>